<resources>
    <string name="app_name">ವಾಣಿ</string>
    <string name="app_key">com.vaani</string>
    <string name="file_type_label">File type</string>
    <string name="previous_desc">Play previous media</string>
    <string name="rewind_desc">Rewind 10s</string>
    <string name="play_pause_desc">Play/Pause</string>
    <string name="fast_forward_desc">Fast-forward 10s</string>
    <string name="next_desc">Play next media</string>
    <string name="list_item_sample_title">Download</string>
    <string name="list_item_sample_subtext">50 media files</string>
    <string name="favourite_add_label">Add to favourites</string>
    <string name="favourite_remove_label">Remove from favourites</string>
    <string name="file_item_sample_subtext">05:45</string>
    <string name="file_item_sample_text">Dwadasha Stotra.mp3</string>
    <string name="sample_controller_title">Hari kathaamrutaSaara - Mangalaacharana Sandhi by Ananta kulakarni</string>
    <string name="close_button_description">Close the player</string>
    <string name="notification_content_title">\"My Notification Title</string>
    <string name="notification_content_text">My Notification Content Text</string>
    <string name="notification_channel_name">My Notificatino Channel Name</string>
    <string name="shuffle">shuffle_icon</string>
    <string name="repeat">repeat icon</string>
    <string name="no_item_prompt">No media</string>
    <string name="controls_shuffle_on_description">Shuffle playback</string>
    <string name="controls_shuffle_off_description">Shuffle off playbacks</string>
    <string name="player_options">Player options</string>
    <string name="info">Info</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="delete_favourite">Delete Favourite</string>
    <string name="add_favourite">Add favourite</string>
    <string name="copy">Copy</string>
    <string name="move">Move</string>
    <string name="delete">Delete</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="rank">Rank</string>
    <string name="rename">Rename</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="select_theme">Select Theme</string>
    <string name="search_hint">Search Media</string>
    <string name="folders">Folders</string>
    <string name="favorites">Favorites</string>
    <string name="play_button">Play button</string>
    <string name="already_in_favorites">Already in favorites</string>
    <plurals name="favorites_added">
        <item quantity="one">%d item added to favorites</item>
        <item quantity="other">%d items added to favorites</item>
    </plurals>
</resources>