<!-- res/layout/list_item_layout.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?android:listPreferredItemHeight"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal"
    android:paddingStart="?android:listPreferredItemPaddingStart"
    android:paddingEnd="?android:listPreferredItemPaddingEnd">

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/file_type_label"
        android:src="@drawable/music_note_40px" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/file_item_sample_text"
            android:textAppearance="?android:attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/item_subtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/file_item_sample_subtext"
            android:textAppearance="?android:attr/textAppearanceListItemSecondary" />
    </LinearLayout>
</LinearLayout>
