<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:minHeight="60dp">

        <ImageView
            android:id="@+id/file_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/file_type_label"
            android:padding="4dp"
            android:src="@drawable/music_note_40px" />

        <TextView
            style="@style/TextAppearance.Material3.BodyMedium"
            android:id="@+id/file_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/file_image"
            android:singleLine="true"
            android:maxLines="1"
            android:paddingTop="10dp"
            android:text="@string/file_item_sample_text" />

        <TextView
            style="@style/TextAppearance.Material3.BodySmall"
            android:id="@+id/file_subtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/file_text"
            android:layout_gravity="center_vertical"
            android:layout_toEndOf="@id/file_image"
            android:maxLines="1"
            android:text="@string/file_item_sample_subtext"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>