<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2019 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:minHeight="64dp">

        <ImageView
            android:id="@+id/folder_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/file_type_label"
            android:paddingVertical="4dp"
            android:paddingHorizontal="12dp"
            android:src="@drawable/folder_48px" />

        <TextView
            style="@style/TextAppearance.Material3.BodyLarge"
            android:id="@+id/folder_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/folder_image"
            android:maxLines="1"
            android:paddingTop="12dp"
            android:text="@string/list_item_sample_title"/>

        <TextView
            style="@style/TextAppearance.Material3.BodySmall"
            android:id="@+id/folder_subtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/folder_text"
            android:layout_gravity="center_vertical"
            android:layout_toEndOf="@id/folder_image"
            android:maxLines="1"
            android:text="@string/list_item_sample_subtext"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>